--- a/Chapter.1.ipynb
+++ b/Chapter.1.ipynb
@@ -25,9 +25,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e4e5eb2b",
+   "metadata": {},
+   "source": [
+    "ubuntu20 conda"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea75b008",
+   "id": "2f87360f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -49,7 +57,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
