--- a/Chapter.1.ipynb
+++ b/Chapter.1.ipynb
@@ -29,13 +29,100 @@
    "id": "e4e5eb2b",
    "metadata": {},
    "source": [
-    "ubuntu20 conda"
+    "대부분 사람들은 '머신러닝 machine learning' 이란 말을 들으면 로봇을 떠올린다. 누구에게 묻는지에 따라 믿음직한 집사 로봇이나 살인 병기 터미네이터를 생각할 것이다. 하지만 머신러닝은 초현실 판타지가 아니고 이미 우리 주위에 있다. 사실 **광학 문자 판독기 optical character recognition(OCR)** 같은 특별한 몇 가지 애플리케이션이 수십 년 동안 사용되어왔다. 수억 명의 생활을 편리하게 만들어 주류가 된 첫 번째 머신러닝 애플리케이션은 1990년대에 시작되었다. 바로 **스팸 필터 spam filter** 이다. 스스로 생각하는 스카이넷 Skynet 정도는 아니지만 기술적으로 머신러닝이라고 할 수 있다. (실제로 잘 학습되어 있어서 여러분은 더는 이메일에 스팸이라고 표시할 일이 거의 없다.) 이후 추천과 음성 검색으로 발전했으며, 매일 사용하는 많은 제품과 기능을 소리없이 향상시킨 수백 개의 머신러닝 애플리케이션이 나왔다.\n",
+    "\n",
+    "머신러닝의 세상을 탐험하기 전에 전체 머신러닝의 그림을 조망하고 주요 영역과 가장 중요한 랜드마크인 지도 학습과 비지도 학습, 온라인 학습과 배치 학습, 사례 기반 학급과 모델 기반 학습을 알아보겠다. 또한 전형적인 머신러닝 프로젝트의 작업 흐름을 살펴보고 만날 수 있는 주요 문제점과 머신러닝 시스템을 평가하고 세밀하게 튜닝하는 방법을 다루겠다."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "1a3435a5",
+   "metadata": {},
+   "source": [
+    "#### 1.1 머신러닝이란?\n",
+    "\n",
+    "머신러닝은 데이터에서부터 학습하도록 컴퓨터를 프로그래밍하는 과학(또는 예술)이다. 조금 더 일반적인 정의는 다음과 같다.\n",
+    "\n",
+    "[머신러닝]은 명시적인 프로그래밍 없이 컴퓨터가 학습하는 능력을 갖추게 하는 연구 분야다.\n",
+    "\n",
+    "조금 더 공학적인 정의는 다음과 같다.\n",
+    "\n",
+    "어떤 작업 T에 대한 컴퓨터 프로그램의 성능을 P로 측정했을 때 경험 E로 인해 성능이 향상됐다면, 이 컴퓨터 프로그램은 작업 T와 성능 P에 대해 경험 E로 학습한 것이다.\n",
+    "\n",
+    "스팸필터는 스팸메일과 일반메일의 샘플을 이용해 스팸메일 구분법을 배울 수 있는 머신러닝 프로그램이다. 시스템이 학습하는 데 사용하는 샘플을 **훈련세트 trainning set**라고 하고 각 훈련 데이터를 **훈련 사례 trainnig instance** 혹은 **샘플**라고 한다. 이 경우 작업 T는 새로운 메일이 스팸인지 구분하는 것이고, 경험 E는 **훈련 데이터 trainnig data**이며, 성능 측정 P는 직접 정의해야 한다. 예를 들면 정확히 분류된 메일의 비율을 P로 사용할 수 있다. 이 성능 측정을 **정확도 accuracy**라고 부르며 분류 작업에 자주 사용된다. 위키백과 문서를 모두 내려받으면 우리 컴퓨터는 아주 많은 데이터를 갖게 된다. 그렇다고 해서 어떤 작업이 갑자기 좋아지는 것은 아니다. 그러므로 위키백과 문서를 다운로드하는 것은 머신러닝이 아니다.\n",
+    "\n",
+    "#### 1.2 왜 머신러닝을 사용하는가?\n",
+    "\n",
+    "전통적인 프로그래밍 기법을 사용해 어떻게 스팸 필터를 만들 수 있을지 생각해보자.\n",
+    "\n",
+    "1. 먼저 스팸에 어떤 단어들이 주로 나타나는지 살펴본다. 그러면 '4U','신용카드','무료','굉장한' 같은 단어나 구절이 제목에 많이 나타나는 경향이 있다는 것을 알 수 있다. 어쩌면 보낸이의 이름이나 메일 주소, 본문이나 이메일의 다른 요소에서 다른 패턴을 감지할 수도 있다.\n",
+    "\n",
+    "2. 발견한 각 패턴을 감지하는 알고리즘을 작성하여 프로그램이 이런 패턴을 발견했을 때 그 메일을 스팸으로 분류하게 된다.\n",
+    "\n",
+    "3. 프로그램을 테스트하고 론칭할 만큼 충분한 성능이 나올 때까지 1단계와 2단계를 반복한다.\n",
+    "\n",
+    "문제가 어렵기 때문에 규칙이 점점 길고 복잡해지므로 유지 보수하기 매우 힘들어진다. \n",
+    "\n",
+    "**그림 1-1** 전통적인 접근 방법\n",
+    "<img src='1.2.PNG' style='width:600px;'>\n",
+    "\n",
+    "\n",
+    "반면 머신러닝 기법에 기반을 둔 스팸 필터는 일반 메일에 비해 스팸에 자주 나타나는 패턴을 감지하여 어떤 단어와 구절이 스팸 메일을 판단하는 데 좋은 기준인지 자동으로 학습한다. 그러므로 프로그램이 훨씬 짧아지고 유지 보수하기 쉬우며 대부분 정확도가 더 높다.\n",
+    "\n",
+    "**그림 1-2** 머신러닝 접근 방법\n",
+    "<img src='1.3.PNG' style='width:600px;'>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37e94611",
+   "metadata": {},
+   "source": [
+    "스팸 메일 발송자가 '4U'를 포함한 모든 메일이 차단된다는 것을 안다면 어떻게 될까? 아마도 '4U'대신 'For U'를 쓰기 시작할지도 모른다. 전통적인 프로그래밍 방식의 스팸 필터는 'For U'메일을 구분하기 위해 수정이 필요하다. 스팸 메일 방송자가 스팸 필터에 대항해 계속 단어를 바꾸면 영원히 새로운 규칙을 추가해야 한다.\n",
+    "\n",
+    "하지만 머신러닝 기반의 스팸 필터는 사용자가 스팸으로 지정한 메일에 유독 'For U'가 자주 나타나는 것을 자동으로 인식하고 별도의 작업을 하지 않아도 자동으로 이 단어를 스팸으로 분류한다.\n",
+    "\n",
+    "머신러닝이 유용한 또 다른 분야는 전통적인 방식으로는 너무 복잡하거나 알려진 알고리즘이 없는 문제이다. '음성 인식'을 예로 들 수 있다. 'one'과 ''two'두 단어를 구분하는 프로그램을 작성한다고 하자. 단어 'two'는 높은 피치 pich의 사운드('T')로 시작하므로 높은 피치의 사운드 강도를 측정하는 알고리즘을 하드코딩해서 'one'과 'two'를 구분할 수도 있다. 당연히 이 방법은 소음이 있는 환경에서 수백만 명이 말하는 여러 언어로 된 수천개의 단어를 구분하는 것으로 확장하기 어렵다. 각 단어를 녹음한 샘플을 사용해 스스로 학습하는 알고리즘을 작성하는 것이 현재 가장 좋은 솔루션이다.\n",
+    "\n",
+    "우리는 머신러닝을 통해 배울 수도 있다. 즉, 머신러닝 알고리즘이 학습한 것을 조사할 수 있다. 예를 들어 스팸필터가 충분한 스팸 메일로 훈련되었다면 스팸을 예측하는 데 가장 좋은 단어 및 단어의 조합이 무엇인지 확인할 수 있다. 가끔 예상치 못한 연관 관계나 새로운 추세가 발견되기도 해서 해당 문제를 더 잘 이해하도록 도와준다. 머신러닝 기술을 적용해서 대용량의 데이터를 분석하면 겉으로는 보이지 않던 패턴을 발견할 수 있다. 이를 **데이터 마이닝 data mining**이라고 한다.\n",
+    "\n",
+    "\n",
+    "요약하면 머신러닝은 다음 분야에 뛰어납니다.\n",
+    "\n",
+    "- 기존 솔루션으로는 많은 수동 조정과 규칙이 필요한 문제: 하나의 머신러닝 모델이 코드를 간단하게 만들고 전통적인 방법보다 더 잘 수행되도록 할 수 있다.\n",
+    "- 전통적인 방식으로는 해결 방법이 없는 복잡한 문제: 가장 뛰어난 머신러닝 기법으로 해결 방법을 찾을 수 있다.\n",
+    "- 유동적인 환경: 머신러닝 시스템은 새로운 데이터에 적응할 수 있다.\n",
+    "- 복잡한 문제와 대량의 데이터에서 통찰 얻기\n",
+    "\n",
+    "#### 1.3 애플리케이션 사례\n",
+    "\n",
+    "구체적인 머신러닝 작업의 사례와 이를 위한 기술을 함께 살펴보겠다.\n",
+    "\n",
+    "- 생산 라인에서 제품 이미지를 분석해 자동으로 분류하기: 이미지 분류 작업이다. 일반적으로 합성공 신경망(convolutional neural network CNN)을 사용하여 수행한다.\n",
+    "- 뇌를 스캔하여 종양 진단하기: 시맨틱 분할 작업이다. 일반적으로 CNN을 사용해 이미지의 각 픽셀을 분류한다.(종양의 정화간 위치와 모양을 결정해야 한다.)\n",
+    "- 자동으로 뉴스 기사를 분류하기: 자연어 처리 netural language processing NLP 작업이다. 더 구체적으로 말하면 텍스트 분류이다. 순환 신경망 recurrent neural network(RNN),CNN,트래스포머 Transformer를 사용해 해결할 수 있다.\n",
+    "- 토론 포럼에서 부정적인 코멘트를 자동으로 구분하기: 역시 텍스트 분류작업이다.\n",
+    "- 긴 문서를 자동으로 요약하기: 텍스트 요약이라고 불리는 NLP의 한 분야이다.\n",
+    "- 챗봇 chatbot 또는 개인 비서 만들기: 자연어 이해 natural language understanding NLU와 질문-대답 모듈을 사용해 여러가지 NLP 컴포넌트가 필요하다.\n",
+    "- 다양한 성능 지표를 기반으로 회사의 내년도 수익을 예측하기: 회귀 regression 작업이다.(즉 숫자로 값을 예측한다) 선형 회귀, 다항 회귀, 회귀 랜덤포레스트, 인공 신경망 artificial neural network과 같은 회귀 모델을 사용해서 해결 할 수있다. 지난 성능 지표의 시퀀스를 고려한다면 RNN, CNN 또는 트랜스포머를 사용할 수 있다.\n",
+    "- 음성 명령에 반응하는 앱을 만들기: 음성 음식 작업이다. 오디오 샘플 처리해야 한다. 이는 길고 복잡한 시퀀스이므로 일반적으로 RNN, CNN 또는 트랜스포머를 사용한다.\n",
+    "- 신용 카드 부정 거래 감지하기: 이상치 탐지 작업이다.\n",
+    "- 구매 이력을 기반으로 고객을 나누고 각 집합마다 다른 마케팅 전략을 계회하기: 군집 clustering 작업이다.\n",
+    "- 고차원의 복잡한 데이터셋을 명확하고 의미 있는 그래프로 표현하기: 데이터 시각화 작업이다. 차원 축소 dimensionality reduction 기법을 많이 사용한다.\n",
+    "- 과거 구매 이력을 기반으로 고객이 관심을 가질 수 있는 상품 추천하기: 추천시스템이다. 과구 구매 이력을 인공 신경망에 주입하고 다음에 구매할 가능성이 가장 높은 상품을 출력하는 것이 한 가지 방법이다. 일반적으로 모든 고객의 구매이력을 기반으로 훈련한다.\n",
+    "- 지능형 게임 봇 만들기: 보통 강화 학습 reinforcement leanring으로 해결한다. 시간이 지나면 주어진 환경에서 보상이 최대가 되는 행동을 선택하는 에이전트를 훈련하는 머신러닝의 한 분야이다. (예를 들어 상대 플레이어 점수가 잃을 때마다 봇이 보상을 받을 수 있다) ex)알파고\n",
+    "\n",
+    "이 목록이 전부는 아니지만 머신러닝이 다룰 수 있는 작업의 복잡도와 다양성을 물론 이런 작업에 사용할 수 있는 기술에 대한 감을 얻어기를 바란다.\n",
+    "\n",
+    "#### 1.4 머신러닝 시스템의 종류\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f87360f",
+   "id": "678e9e8e",
    "metadata": {},
    "outputs": [],
    "source": []
