--- a/naver_crawler.ipynb
+++ b/naver_crawler.ipynb
@@ -12,7 +12,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
+   "id": "c328ef4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from urllib.request import urlopen\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "import re\n",
+    "import pandas as pd\n",
+    "from datetime import datetime, timedelta\n",
+    "import plotly.express as px"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "d84b1d64",
    "metadata": {},
    "outputs": [],
@@ -22,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "d5479b67",
    "metadata": {},
    "outputs": [],
@@ -32,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "417f13a3",
    "metadata": {},
    "outputs": [
@@ -106,7 +122,7 @@
        "4  스킨케어     크림  https://search.shopping.naver.com/best100v2/de..."
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "afc94958",
    "metadata": {},
    "outputs": [
@@ -236,7 +252,7 @@
        "4  https://cr2.shopping.naver.com/adcr.nhn?x=alAQ...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "id": "df3ad36a",
    "metadata": {},
    "outputs": [
@@ -274,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "id": "305ee1e4",
    "metadata": {},
    "outputs": [
@@ -305,8 +321,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "1b4cbbd7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from urllib.request import urlopen\n",
+    "from bs4 import BeautifulSoup\n",
+    "\n",
+    "import re\n",
+    "import pandas as pd\n",
+    "from datetime import datetime, timedelta\n",
+    "\n",
+    "# https://search.shopping.naver.com/best100v2/detail.nhn?catId=50000190\n",
+    "\n",
+    "category_df = pd.DataFrame({\n",
+    "    'category' : ['스킨케어', '베이스메이크업', '색조메이크업', '클렌징', \n",
+    "                  '마스크/팩', '선케어', '남성화장품', '향수', \n",
+    "                  '바디케어', '헤어케어', '헤어스타일링', '네일케어',\n",
+    "                 '뷰티소품'],\n",
+    "    'category_code' : ['50000190', '50000194', '50000195', '50000192', \n",
+    "                       '50000193','50000191', '50000202', '50000200',\n",
+    "                      '50000197', '50000198', '50000199', '50000196',\n",
+    "                      '50000201']\n",
+    "})\n",
+    "\n",
+    "total = pd.DataFrame()\n",
+    "\n",
+    "today_dt = datetime.today()\n",
+    "\n",
+    "for catid in range(len(category_df)):\n",
+    "    category_nm = category_df['category'][catid]\n",
+    "    category_code = category_df['category_code'][catid]\n",
+    "\n",
+    "    url = 'https://search.shopping.naver.com/best100v2/detail.nhn?catId=' + category_code\n",
+    "    \n",
+    "    \n",
+    "    html = urlopen(url)\n",
+    "    bsObject = BeautifulSoup(html, \"html.parser\")\n",
+    "\n",
+    "    tag = 'li'\n",
+    "    className = '_itemSection'\n",
+    "    content = bsObject.body.find_all(tag,{\"class\", className})\n",
+    "\n",
+    "\n",
+    "    # for i in range(3):\n",
+    "    for i in range(len(content)):\n",
+    "        tag = \"p\"\n",
+    "        className = \"cont\"\n",
+    "        title = content[i].find(tag,{\"class\", className})\n",
+    "        title_name = title.text.replace('\\n',\"\")\n",
+    "\n",
+    "        tag = \"div\"\n",
+    "        className = \"price\"\n",
+    "        price = content[i].find(tag,{\"class\", className})\n",
+    "        price_name = price.text.replace('\\n','')\n",
+    "        \n",
+    "        price_num = numbers = re.sub(r'[^0-9]', '', price_name)\n",
+    "        \n",
+    "        df = pd.DataFrame({\n",
+    "            'date' : [today_dt],\n",
+    "            'category' : [category_nm],\n",
+    "            'title' : [title_name],\n",
+    "            'price' : [price_num],\n",
+    "        })\n",
+    "        total = pd.concat([total, df])\n",
+    "\n",
+    "# 저장\n",
+    "total.to_csv(\"top_100.csv\", index = False)\n",
+    "\n",
+    "# # .to_csv \n",
+    "# # 최초 생성 이후 mode는 append\n",
+    "# if not os.path.exists('top_100.csv'):\n",
+    "#     df.to_csv('top_100.csv', index=False, mode='w')\n",
+    "# else:\n",
+    "#     df.to_csv('top_100.csv', index=False, mode='a', header=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31277fbf",
    "metadata": {},
    "outputs": [],
    "source": []
