--- a/ocr.ipynb
+++ b/ocr.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2da025dc",
+   "id": "cf025315",
    "metadata": {},
    "source": [
     "### 자동차 번호판 인식기 - Python, 이미지 프로세싱\n",
@@ -62,7 +62,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f10f7f6e400>"
+       "<matplotlib.image.AxesImage at 0x7fbdc72bd310>"
       ]
      },
      "execution_count": 6,
@@ -81,7 +81,7 @@
     }
    ],
    "source": [
-    "img_ori = cv2.imread('./data/license_plate_recognition/1.jpg')\n",
+    "img_ori = cv2.imread('./data/1.jpg')\n",
     "\n",
     "height, width, channel = img_ori.shape\n",
     "\n",
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c6e836e",
+   "id": "5b1bd00e",
    "metadata": {},
    "source": [
     "#### 번호판 찾기"
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dca405c4",
+   "id": "ad2fd91c",
    "metadata": {},
    "source": [
     "contour을 감싸는 사각형 모습이 나타난다."
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5c44346",
+   "id": "dbd3c288",
    "metadata": {},
    "source": [
     "결과화면을 보면 번호판 후보군 나온 것을 확인"
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d855733",
+   "id": "17911a66",
    "metadata": {},
    "source": [
     "회전 시키고, 원하는 부분만을 잘라낸 결과"
