--- a/ocr.ipynb
+++ b/ocr.ipynb
@@ -5,7 +5,7 @@
    "id": "cf025315",
    "metadata": {},
    "source": [
-    "### 자동차 번호판 인식기 - Python, 이미지 프로세싱\n",
+    "### 자동차 번호판 인식기 - Python, 이미지 프로세싱 따라하기\n",
     "\n",
     "\n",
     "Dependencies:\n",
